{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 13,
  "lineage": "162b9ac7-2a35-221e-2d2a-2015d71468fe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07b4ed8122cc40545",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-05700a3a9bbd1d8ed",
            "domain": "vpc",
            "id": "eipalloc-07b4ed8122cc40545",
            "instance": "i-0f7d24c7faf2e51ea",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-04634943b0c4b9447",
            "private_dns": "ip-10-0-1-50.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-13-229-179-89.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.229.179.89",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Author": "Dong Giang Thai",
              "Email": "donggiangthai1998@gmail.com",
              "Name": "Terraform Mock Project"
            },
            "tags_all": {
              "Author": "Dong Giang Thai",
              "Email": "donggiangthai1998@gmail.com",
              "Name": "Terraform Mock Project"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.terraform-web-server",
            "aws_security_group.terraform-sg",
            "aws_subnet.terraform-subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0750a20e9959e44ff",
            "arn": "arn:aws:ec2:ap-southeast-1:848615702835:instance/i-0f7d24c7faf2e51ea",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f7d24c7faf2e51ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-mock-project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-04634943b0c4b9447"
              }
            ],
            "primary_network_interface_id": "eni-04634943b0c4b9447",
            "private_dns": "ip-10-0-1-50.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "13.229.179.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0efda201f7f01194c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2fd4c306cdd31d0",
            "tags": {
              "Author": "Dong Giang Thai",
              "Email": "donggiangthai1998@gmail.com",
              "Name": "Terraform Mock Project"
            },
            "tags_all": {
              "Author": "Dong Giang Thai",
              "Email": "donggiangthai1998@gmail.com",
              "Name": "Terraform Mock Project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024fb7e99dd9f4151"
            ]
          },
          "dependencies": [
            "aws_network_interface.terraform-web-server",
            "aws_security_group.terraform-sg",
            "aws_subnet.terraform-subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848615702835:internet-gateway/igw-0871bcd504323360e",
            "id": "igw-0871bcd504323360e",
            "owner_id": "848615702835",
            "tags": {
              "Author": "Dong Giang Thai",
              "Email": "donggiangthai1998@gmail.com",
              "Name": "Terraform Mock Project"
            },
            "tags_all": {
              "Author": "Dong Giang Thai",
              "Email": "donggiangthai1998@gmail.com",
              "Name": "Terraform Mock Project"
            },
            "vpc_id": "vpc-032da8b09fcf00705"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "terraform-web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848615702835:network-interface/eni-04634943b0c4b9447",
            "attachment": [
              {
                "attachment_id": "eni-attach-023089fd958bb71c2",
                "device_index": 0,
                "instance": "i-0f7d24c7faf2e51ea"
              }
            ],
            "id": "eni-04634943b0c4b9447",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:f3:47:b0:4a:92",
            "owner_id": "848615702835",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-024fb7e99dd9f4151"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2fd4c306cdd31d0",
            "tags": {
              "Author": "Dong Giang Thai",
              "Email": "donggiangthai1998@gmail.com",
              "Name": "Terraform Mock Project"
            },
            "tags_all": {
              "Author": "Dong Giang Thai",
              "Email": "donggiangthai1998@gmail.com",
              "Name": "Terraform Mock Project"
            }
          },
          "dependencies": [
            "aws_security_group.terraform-sg",
            "aws_subnet.terraform-subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848615702835:route-table/rtb-03a950b09b826da94",
            "id": "rtb-03a950b09b826da94",
            "owner_id": "848615702835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0871bcd504323360e",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0871bcd504323360e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "Dong Giang Thai",
              "Email": "donggiangthai1998@gmail.com",
              "Name": "Terraform Mock Project"
            },
            "tags_all": {
              "Author": "Dong Giang Thai",
              "Email": "donggiangthai1998@gmail.com",
              "Name": "Terraform Mock Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-032da8b09fcf00705"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a848336781afbff",
            "route_table_id": "rtb-03a950b09b826da94",
            "subnet_id": "subnet-0b2fd4c306cdd31d0"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.terraform-route-table",
            "aws_subnet.terraform-subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848615702835:security-group/sg-024fb7e99dd9f4151",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024fb7e99dd9f4151",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "terraform-sg",
            "name_prefix": "",
            "owner_id": "848615702835",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Dong Giang Thai",
              "Email": "donggiangthai1998@gmail.com",
              "Name": "Terraform Mock Project"
            },
            "tags_all": {
              "Author": "Dong Giang Thai",
              "Email": "donggiangthai1998@gmail.com",
              "Name": "Terraform Mock Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-032da8b09fcf00705"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848615702835:subnet/subnet-0b2fd4c306cdd31d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2fd4c306cdd31d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848615702835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Dong Giang Thai",
              "Email": "donggiangthai1998@gmail.com",
              "Name": "Terraform Mock Project"
            },
            "tags_all": {
              "Author": "Dong Giang Thai",
              "Email": "donggiangthai1998@gmail.com",
              "Name": "Terraform Mock Project"
            },
            "vpc_id": "vpc-032da8b09fcf00705"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848615702835:vpc/vpc-032da8b09fcf00705",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04db193e4827f51cb",
            "default_route_table_id": "rtb-0c488a0b8ac6cc52d",
            "default_security_group_id": "sg-086adbe64e84d5b13",
            "dhcp_options_id": "dopt-0c5a260fcd98271ea",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-032da8b09fcf00705",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c488a0b8ac6cc52d",
            "owner_id": "848615702835",
            "tags": {
              "Author": "Dong Giang Thai",
              "Email": "donggiangthai1998@gmail.com",
              "Name": "Terraform Mock Project"
            },
            "tags_all": {
              "Author": "Dong Giang Thai",
              "Email": "donggiangthai1998@gmail.com",
              "Name": "Terraform Mock Project"
            }
          }
        }
      ]
    }
  ]
}